# blobsim

./: .dockerignore  .gitignore  AGENTS.md  Analysis.ipynb  Cargo.toml  GEMINI.md  README.md  app.js  blobsim.toml  create_notebook.py  index.html  metrics.md  parse_shadow_logs.py  pyproject.toml  run_network.sh  shadow-sim.py
.github/: copilot-instructions.md
docker/: Dockerfile
notebooks/: analysis.ipynb  loaders.py  plotly_theme.py
patch/quinn-udp/: Cargo.toml
patch/quinn-udp/src/: lib.rs
scripts/: render_notebooks.py
site/: package-lock.json  package.json
site/src/components/: NotebookEmbed.astro  RunCard.astro
site/src/layouts/: BaseLayout.astro
site/src/lib/: SiteData.ts
site/src/pages/: index.astro
site/src/pages/run/: [runId].astro
site/src/styles/: global.css  notebook.css
src/: el_net.rs  events.rs  main.rs  metrics.rs  network.rs  partial.rs  state_machine.rs  types.rs
