[package]
name = "blob-sim"
version = "0.1.0"
edition = "2021"
description = "Shadow-compatible Ethereum blob propagation simulator (EIP-7732 / EIP-8070)"

[[bin]]
name = "blob-sim"
path = "src/main.rs"

[dependencies]
libp2p = { version = "0.54", features = [
    "gossipsub",
    "request-response",
    "quic",
    "tokio",
    "macros",
    "json",
] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
futures = "0.3"
