[package]
name = "blob-sim"
version = "0.1.0"
edition = "2021"
description = "Shadow-compatible Ethereum blob propagation simulator (EIP-7732 / EIP-8070)"

[[bin]]
name = "blob-sim"
path = "src/main.rs"

# libp2p is pinned to a rust-libp2p master rev because gossipsub 1.3 partial
# messages (PR #6275, gossipsub 0.50.0 / umbrella 0.57.0) are not yet published
# to crates.io. The `gossipsub-partial-messages` feature is the passthrough to
# `libp2p-gossipsub/partial-messages`.
[dependencies]
libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "891bf049c63f65a1b9500b00c6d0a39afae175a2", features = [
    "gossipsub",
    "gossipsub-partial-messages",
    "quic",
    "dns",
    "tokio",
    "macros",
] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Compact binary codec for partial data-column messages (cells are raw 2 KiB
# bytes; JSON would base64-bloat them and distort bandwidth accounting).
bincode = "1"
rand = "0.8"
futures = "0.3"
alloy-rlp = { version = "0.3", features = ["derive"] }

[patch.crates-io]
quinn-udp = { path = "patch/quinn-udp" }

# Local copy of the pinned rust-libp2p rev (891bf049) with one change: gossipsub's
# partial-message state TTL (`DEFAULT_PARTIAL_TTL`) raised from 5 heartbeats
# (~3.5s — expires before the builder seeds columns at t=4s, deadlocking the
# cell-delta exchange) to 30 (~21s, outliving a 12s slot). See
# vendor/rust-libp2p/protocols/gossipsub/src/extensions/partial_messages.rs.
[patch."https://github.com/libp2p/rust-libp2p"]
libp2p = { path = "vendor/rust-libp2p/libp2p" }

