[project]
name = "blobsim"
version = "0.1.0"
description = "Analysis notebooks + observatory for the blobsim Shadow simulation"
requires-python = ">=3.11"
dependencies = []

# Rendering/serving the analysis notebooks (see scripts/render_notebooks.py and
# `shadow-sim.py --serve`). Install with `uv sync --group notebooks`.
[dependency-groups]
notebooks = [
    "jupyter>=1.0",
    "papermill>=2.6",
    "nbconvert>=7.0",
    "plotly>=5.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "nbformat>=5.0",
    "networkx>=3.6.1",
    "coolname>=2.0",
]

[tool.uv]
package = false
